fixed security issue

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.1.2 (18-Feb-16)
+------------------------
+
+- Bypass security for some of the Thai videos
+
+------------------------
 DooFree v3.1.1 (20-Jan-16)
 ------------------------
 
