fixed security issue

--- a/plugin.video.doofree/changelog.txt
+++ b/plugin.video.doofree/changelog.txt
@@ -1,4 +1,10 @@
 ------------------------
+DooFree v3.4.7 (03-Apr-16)
+------------------------
+
+- Bypass new security of FMovies
+
+------------------------
 DooFree v3.4.6 (27-Mar-16)
 ------------------------
 
